@@ -1,0 +1,30 @@
+# Exim test configuration 0533
+
+CONNECTCOND=
+
+exim_path = EXIM_PATH
+host_lookup_order = bydns
+primary_hostname = myhost.test.ex
+rfc1413_query_timeout = 0s
+spool_directory = DIR/spool
+log_file_path = DIR/spool/log/%slog
+gecos_pattern = ""
+gecos_name = CALLER_NAME
+
+# ----- Main settings -----
+
+acl_smtp_rcpt = rcpt
+dns_again_means_nonexist = *
+disable_ipv6
+
+# ----- ACL -----
+
+begin acl
+
+rcpt:
+  accept hosts = +ignore_unknown : \
+    *.$sender_address_domain : \
+    $sender_address_domain : \
+    ${lookup dnsdb{>:defer_never,mxh=$sender_address_domain}}
+
+# End
