@@ -1,0 +1,6 @@
+# dns_again_means_nonexist
+exim -d -bh HOSTIPV4
+mail from:<xx@cioce.test.again.dns>
+rcpt to:<a@b>
+quit
+****
