@@ -1,0 +1,73 @@
+Exim version x.yz ....
+changed uid/gid: forcing real = effective
+  uid=uuuu gid=CALLER_GID pid=pppp
+configuration file is TESTSUITE/test-config
+admin user
+changed uid/gid: privilege not needed
+  uid=EXIM_UID gid=EXIM_GID pid=pppp
+originator: uid=CALLER_UID gid=CALLER_GID login=CALLER name=CALLER_NAME
+sender address = CALLER@myhost.test.ex
+sender_fullhost = [ip4.ip4.ip4.ip4]
+sender_rcvhost = [ip4.ip4.ip4.ip4]
+host in hosts_connection_nolog? no (option unset)
+LOG: smtp_connection MAIN
+  SMTP connection from [ip4.ip4.ip4.ip4]
+host in host_lookup? no (option unset)
+set_process_info: pppp handling incoming connection from [ip4.ip4.ip4.ip4]
+host in host_reject_connection? no (option unset)
+host in sender_unqualified_hosts? no (option unset)
+host in recipient_unqualified_hosts? no (option unset)
+host in helo_verify_hosts? no (option unset)
+host in helo_try_verify_hosts? no (option unset)
+host in helo_accept_junk_hosts? no (option unset)
+SMTP>> 220 myhost.test.ex ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
+smtp_setup_msg entered
+SMTP<< mail from:<xx@cioce.test.again.dns>
+SMTP>> 250 OK
+SMTP<< rcpt to:<a@b>
+using ACL "rcpt"
+processing "accept"
+check hosts = +ignore_unknown : *.$sender_address_domain : $sender_address_domain : ${lookup dnsdb{>:defer_never,mxh=$sender_address_domain}}
+search_open: dnsdb "NULL"
+search_find: file="NULL"
+  key=">:defer_never,mxh=cioce.test.again.dns" partial=-1 affix=NULL starflags=0
+LRU list:
+internal_search_find: file="NULL"
+  type=dnsdb key=">:defer_never,mxh=cioce.test.again.dns"
+database lookup required for >:defer_never,mxh=cioce.test.again.dns
+dnsdb key: cioce.test.again.dns
+Return from DNS lookup of cioce.test.again.dns (MX) faked for testing
+DNS lookup of cioce.test.again.dns (MX) gave TRY_AGAIN
+cioce.test.again.dns in dns_again_means_nonexist? yes (matched "*")
+cioce.test.again.dns is in dns_again_means_nonexist: returning DNS_NOMATCH
+lookup failed
+sender host name required, to match against *.cioce.test.again.dns
+looking up host name for ip4.ip4.ip4.ip4
+DNS lookup of 206.10.111.131.in-addr.arpa (PTR) using fakens
+DNS lookup of 206.10.111.131.in-addr.arpa (PTR) succeeded
+IP address lookup yielded the.local.host.name
+using host_fake_gethostbyname for the.local.host.name (IPv4)
+DNS lookup of the.local.host.name (A) using fakens
+DNS lookup of the.local.host.name (A) succeeded
+MUNGED: ::1 will be omitted in what follows
+get[host|ipnode]byname[2] looked up these IP addresses:
+  name=the.local.host.name address=ip4.ip4.ip4.ip4
+checking addresses for the.local.host.name
+  ip4.ip4.ip4.ip4 OK
+sender_fullhost = the.local.host.name [ip4.ip4.ip4.ip4]
+sender_rcvhost = the.local.host.name ([ip4.ip4.ip4.ip4])
+cioce.test.again.dns in dns_again_means_nonexist? yes (matched "*")
+cioce.test.again.dns is in dns_again_means_nonexist: returning HOST_FIND_FAILED
+failed to find IP address for cioce.test.again.dns: item ignored by +ignore_unknown
+host in "+ignore_unknown : *.cioce.test.again.dns : cioce.test.again.dns : "? no (end of list)
+accept: condition test failed
+end of ACL "rcpt": implicit DENY
+SMTP>> 550 Administrative prohibition
+LOG: MAIN REJECT
+  H=the.local.host.name [ip4.ip4.ip4.ip4] F=<xx@cioce.test.again.dns> rejected RCPT <a@b>
+SMTP<< quit
+SMTP>> 221 myhost.test.ex closing connection
+LOG: smtp_connection MAIN
+  SMTP connection from the.local.host.name [ip4.ip4.ip4.ip4] closed by QUIT
+search_tidyup called
+>>>>>>>>>>>>>>>> Exim pid=pppp terminating with rc=0 >>>>>>>>>>>>>>>>
